--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -22,21 +22,21 @@
             android:orientation="horizontal">
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/image_profile"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:id="@+id/image_profile"
-                android:src="@drawable/ic_profile"
-                android:layout_margin="10dp"/>
+                android:layout_margin="10dp"
+                android:src="@drawable/ic_profile" />
 
             <TextView
+                android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/username"
-                android:text="Username"
                 android:layout_gravity="center_vertical"
+                android:text="Username"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:textColor="@color/colorPrimaryDark"/>
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -45,11 +45,11 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/post_image"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:id="@+id/post_image"
 
-                app:layout_constraintDimensionRatio="1:1"/>
+                app:layout_constraintDimensionRatio="1:1" />
 
         </android.support.constraint.ConstraintLayout>
 
@@ -59,55 +59,54 @@
             android:padding="8dp">
 
             <ImageView
+                android:id="@+id/like"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:id="@+id/like"
-                android:src="@drawable/ic_like"/>
+                android:src="@drawable/ic_like" />
 
             <ImageView
+                android:id="@+id/comment"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:id="@+id/comment"
-                android:src="@drawable/ic_comment"
+                android:layout_marginStart="10dp"
                 android:layout_toEndOf="@id/like"
-                android:layout_marginStart="10dp"/>
-
+                android:src="@drawable/ic_comment" />
 
 
         </RelativeLayout>
 
         <TextView
+            android:id="@+id/likes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:textColor="@color/colorPrimaryDark"
-            android:textStyle="bold"
-            android:id="@+id/likes"/>
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/publisher"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:textColor="@color/colorPrimaryDark"
-            android:textStyle="bold"
-            android:id="@+id/publisher"/>
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:textColor="@color/colorPrimaryDark"
-            android:id="@+id/description"/>
+            android:textColor="@color/colorPrimaryDark" />
 
         <TextView
+            android:id="@+id/comments"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="View All 20 Comments"
             android:layout_marginStart="8dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/colorAccent"
-            android:id="@+id/comments"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            android:text="View All 20 Comments"
+            android:textColor="@color/colorAccent" />
 
     </LinearLayout>
 
