--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -17,7 +17,7 @@
 
     <item
         android:id="@+id/nav_heart"
-        android:icon="@drawable/ic_heart"
+        android:icon="@drawable/ic_comment"
         android:title=""/>
 
     <item
